configure production deployment for 3strom.cabuaxe.com
- Make CORS origins configurable via CORS_ALLOWED_ORIGINS env var
  (defaults to http://localhost:4200 for local dev)
- Make OpenAPI server URL configurable via APP_BASE_URL env var
- Add SSE proxy buffering disabled in nginx for event stream support
- Set nginx server_name to 3strom.cabuaxe.com
- Fix production apiUrl to empty string (relative /api/v1/ paths)
- Add docker-compose.prod.yml with full stack (mysql, redis, backend,
  frontend) and production env vars
- Add .env.example for production secrets

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>